# syslog-usg

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  RELEASE.md  deny.toml  sonar-project.properties
.github/workflows/: ci.yml  claude-security-review.yml  sonar.yml
benches/syslog-bench/: Cargo.toml
benches/syslog-bench/benches/: outputs.rs  parse.rs  pipeline.rs
container/: Dockerfile  docker-compose.yml
crates/syslog-config/: Cargo.toml
crates/syslog-config/src/: convert.rs  error.rs  lib.rs  model.rs
crates/syslog-mgmt/: Cargo.toml
crates/syslog-mgmt/src/: action.rs  convention.rs  error.rs  feature.rs  lib.rs  model.rs  pattern.rs  selector.rs  state.rs
crates/syslog-observe/: Cargo.toml
crates/syslog-observe/src/: health.rs  lib.rs  logging.rs  metrics.rs
crates/syslog-parse/: Cargo.toml
crates/syslog-parse/src/: detect.rs  error.rs  lib.rs  octet_counting.rs  parse_mode.rs
crates/syslog-parse/src/rfc3164/: heuristics.rs  mod.rs  parser.rs
crates/syslog-parse/src/rfc5424/: header.rs  mod.rs  msg.rs  parser.rs  serializer.rs  structured_data.rs
crates/syslog-parse/tests/: differential.rs  proptest_parse.rs
crates/syslog-proto/: Cargo.toml
crates/syslog-proto/src/: alarm.rs  app_name.rs  facility.rs  hostname.rs  lib.rs  message.rs  message_id.rs  pri.rs  proc_id.rs  sd_id.rs  severity.rs  structured_data.rs  timestamp.rs
crates/syslog-relay/: Cargo.toml
crates/syslog-relay/src/: alarm_filter.rs  alarm_state.rs  error.rs  filter.rs  lib.rs  output.rs  pipeline.rs  queue.rs  routing.rs  signing.rs  verification.rs
crates/syslog-server/: Cargo.toml
crates/syslog-server/src/: main.rs  network_output.rs
crates/syslog-sign/: Cargo.toml
crates/syslog-sign/src/: blocks.rs  certificate.rs  chain.rs  counter.rs  encode.rs  error.rs  hash.rs  lib.rs  prepare.rs  signature.rs  signer.rs  types.rs  verifier.rs
crates/syslog-transport/: Cargo.toml
crates/syslog-transport/src/: dtls.rs  error.rs  framing.rs  lib.rs
crates/syslog-transport/src/tcp/: mod.rs
crates/syslog-transport/src/tls/: mod.rs
crates/syslog-transport/src/udp/: mod.rs
crates/syslog-transport/tests/: proptest_codec.rs
docs/: deployment-guide.md  phase-01-requirements.md  phase-02-rfc-analysis.md  phase-03-architecture.md  phase-04-rust-architecture.md  phase-05-transport-security.md  phase-06-parsing.md  phase-07-relay-routing.md  phase-08-management.md  phase-09-observability.md  phase-10-security.md  phase-11-qa.md  phase-12-documentation.md  rfc-compliance.md  security-review-2026-03-14.md
examples/: config-docker.toml  config-minimal.toml  config-secure.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cert_reassembly.rs  fuzz_config.rs  fuzz_octet_counting.rs  fuzz_parse_auto.rs  fuzz_parse_rfc3164.rs  fuzz_parse_rfc5424.rs  fuzz_pem_loader.rs  fuzz_pri.rs  fuzz_replay_detector.rs  fuzz_roundtrip.rs  fuzz_signature_block.rs  fuzz_structured_data.rs
tests/integration/: Cargo.toml  end_to_end.rs  hardening.rs  lifecycle.rs
tests/interop/: Cargo.toml  interop_tests.rs
tests/interop/fixtures/rsyslog/: Dockerfile  rsyslog-tcp-3164.conf  rsyslog-tcp-5424.conf  rsyslog-udp-5424.conf
tests/interop/fixtures/syslog-ng/: Dockerfile  syslog-ng-tcp-3164.conf  syslog-ng-tcp-5424.conf  syslog-ng-udp-5424.conf
