[package]
name = "syslog-usg-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
bytes = "1"
base64 = "0.22"
compact_str = { version = "0.9", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.syslog-proto]
path = "../crates/syslog-proto"

[dependencies.syslog-parse]
path = "../crates/syslog-parse"

[dependencies.syslog-transport]
path = "../crates/syslog-transport"

[dependencies.syslog-config]
path = "../crates/syslog-config"

[dependencies.syslog-sign]
path = "../crates/syslog-sign"

[workspace]
members = ["."]

# --- Fuzz targets ---

[[bin]]
name = "fuzz_parse_auto"
path = "fuzz_targets/fuzz_parse_auto.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_rfc5424"
path = "fuzz_targets/fuzz_parse_rfc5424.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_rfc3164"
path = "fuzz_targets/fuzz_parse_rfc3164.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_structured_data"
path = "fuzz_targets/fuzz_structured_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_octet_counting"
path = "fuzz_targets/fuzz_octet_counting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pri"
path = "fuzz_targets/fuzz_pri.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cert_reassembly"
path = "fuzz_targets/fuzz_cert_reassembly.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_signature_block"
path = "fuzz_targets/fuzz_signature_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_replay_detector"
path = "fuzz_targets/fuzz_replay_detector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pem_loader"
path = "fuzz_targets/fuzz_pem_loader.rs"
test = false
doc = false
bench = false
