[package]
name = "syslog-config"
description = "Configuration loading, validation, and environment variable substitution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
syslog-mgmt = { workspace = true }
syslog-proto = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
