[package]
name = "syslog-mgmt"
description = "Syslog management model (RFC 5427/9742)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
syslog-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
