[package]
name = "syslog-proto"
description = "Core syslog protocol types (RFC 5424 message model)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
