[package]
name = "syslog-server"
description = "syslog-usg binary entrypoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "syslog-usg"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
syslog-proto = { workspace = true }
syslog-parse = { workspace = true }
syslog-transport = { workspace = true }
syslog-relay = { workspace = true }
syslog-sign = { workspace = true }
syslog-config = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true }
syslog-mgmt = { workspace = true }
syslog-observe = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
metrics = { workspace = true }
