[package]
name = "syslog-sign"
description = "Signed syslog messages (RFC 5848)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
syslog-proto = { workspace = true }
syslog-parse = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rcgen = "0.13"
